--- a/.gitignore
+++ b/.gitignore
@@ -3,12 +3,12 @@
 *.iml
 
 ## Directory-based project format:
-.idea/
+#.idea/
 # if you remove the above rule, at least ignore the following:
 
 # User-specific stuff:
-# .idea/workspace.xml
-# .idea/tasks.xml
+ .idea/workspace.xml
+ .idea/tasks.xml
 # .idea/dictionaries
 # .idea/shelf
 
