--- a/.gitignore
+++ b/.gitignore
@@ -9,22 +9,22 @@
 # User-specific stuff:
  .idea/workspace.xml
  .idea/tasks.xml
-# .idea/dictionaries
-# .idea/shelf
+ .idea/dictionaries
+ .idea/shelf
 
 # Sensitive or high-churn files:
-# .idea/dataSources.ids
-# .idea/dataSources.xml
-# .idea/sqlDataSources.xml
-# .idea/dynamic.xml
-# .idea/uiDesigner.xml
+ .idea/dataSources.ids
+ .idea/dataSources.xml
+ .idea/sqlDataSources.xml
+ .idea/dynamic.xml
+ .idea/uiDesigner.xml
 
 # Gradle:
-# .idea/gradle.xml
-# .idea/libraries
+ .idea/gradle.xml
+ .idea/libraries
 
 # Mongo Explorer plugin:
-# .idea/mongoSettings.xml
+ .idea/mongoSettings.xml
 
 ## File-based project format:
 *.ipr
@@ -46,5 +46,3 @@ com_crashlytics_export_strings.xml
 crashlytics.properties
 crashlytics-build.properties
 fabric.properties
-
-http://
