--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+README.md
+README2.md
+
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio and Webstorm
 
 *.iml
